src/test/deca/syntax/invalid/created/operande_manquante/instanceof__a.deca
// Description :
//    test instanceof pour une opérande manquante
//
// Resultats :
//		Erreur syntaxique
//    	Ligne 11: operante manquante

{
c =  instanceof a;
}